--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "biome check . --apply"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.1",
@@ -28,15 +28,13 @@
 		"zustand": "^5.0.7"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.1",
+		"@biomejs/biome": "^2.2.3",
 		"@tailwindcss/postcss": "^4.1.12",
 		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^24.2.1",
 		"@types/pg": "^8.15.5",
 		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
-		"eslint": "^9.33.0",
-		"eslint-config-next": "15.5.2",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.6",
 		"typescript": "^5.9.2"
