--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
-		"lint": "biome check . --apply"
+		"lint": "biome check ."
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.1",
