--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build --turbopack",
 		"start": "next start",
-		"lint": "biome check ."
+		"lint": "eslint ."
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.1",
@@ -28,7 +28,7 @@
 		"zustand": "^5.0.7"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.3",
+		"@eslint/eslintrc": "^3.3.1",
 		"@tailwindcss/postcss": "^4.1.12",
 		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^24.2.1",
@@ -37,6 +37,8 @@
 		"@types/react-dom": "^19.1.7",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.6",
-		"typescript": "^5.9.2"
+		"typescript": "^5.9.2",
+		"eslint": "^9.33.0",
+		"eslint-config-next": "15.5.2"
 	}
 }
