--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"jose": "^6.1.0",
-		"lucide-react": "^0.539.0",
 		"motion": "^12.23.12",
 		"next": "15.5.2",
 		"pg": "^8.16.3",
@@ -35,10 +34,10 @@
 		"@types/pg": "^8.15.5",
 		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
+		"eslint": "^9.33.0",
+		"eslint-config-next": "15.5.2",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.6",
-		"typescript": "^5.9.2",
-		"eslint": "^9.33.0",
-		"eslint-config-next": "15.5.2"
+		"typescript": "^5.9.2"
 	}
 }
