--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build --turbopack",
+		"dev": "next dev",
+		"build": "next build",
 		"start": "next start",
 		"lint": "eslint ."
 	},
@@ -17,10 +17,10 @@
 		"clsx": "^2.1.1",
 		"jose": "^6.1.0",
 		"motion": "^12.23.12",
-		"next": "15.5.2",
+		"next": "16.0.0-beta.0",
 		"pg": "^8.16.3",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
 		"react-hook-form": "^7.62.0",
 		"tailwind-merge": "^3.3.1",
 		"zod": "^4.0.17",
@@ -32,10 +32,10 @@
 		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^24.2.1",
 		"@types/pg": "^8.15.5",
-		"@types/react": "^19.1.10",
-		"@types/react-dom": "^19.1.7",
-		"eslint": "^9.33.0",
-		"eslint-config-next": "15.5.2",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
+		"eslint": "^9.37.0",
+		"eslint-config-next": "16.0.0-beta.0",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.6",
 		"typescript": "^5.9.2"
