--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-	"name": "medibridge",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "eslint ."
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^5.2.1",
-		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
-		"babel-plugin-react-compiler": "^1.0.0",
-		"bcrypt": "^6.0.0",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"jose": "^6.1.0",
-		"motion": "^12.23.12",
-		"next": "16.0.0-beta.0",
-		"pg": "^8.16.3",
-		"react": "19.2.0",
-		"react-dom": "19.2.0",
-		"react-hook-form": "^7.62.0",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^4.0.17",
-		"zustand": "^5.0.7"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.1",
-		"@tailwindcss/postcss": "^4.1.12",
-		"@types/bcrypt": "^6.0.0",
-		"@types/node": "^24.2.1",
-		"@types/pg": "^8.15.5",
-		"@types/react": "^19.2.2",
-		"@types/react-dom": "^19.2.2",
-		"eslint": "^9.37.0",
-		"eslint-config-next": "16.0.0-beta.0",
-		"tailwindcss": "^4.1.12",
-		"tw-animate-css": "^1.3.6",
-		"typescript": "^5.9.2"
-	}
+  "name": "medibridge",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jose": "^6.1.0",
+    "motion": "^12.23.12",
+    "next": "16.0.0",
+    "pg": "^8.16.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17",
+    "zustand": "^5.0.7"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/bcrypt": "^6.0.0",
+    "@types/node": "^24.2.1",
+    "@types/pg": "^8.15.5",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "16.0.0",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5.9.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
+  }
 }
