--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
+		"ai": "^5.0.89",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"bcrypt": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"jose": "^6.1.0",
 		"motion": "^12.23.12",
-		"next": "16.0.0",
+		"next": "^16.0.1",
 		"pg": "^8.16.3",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
@@ -40,15 +41,9 @@
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
 		"eslint": "^9.37.0",
-		"eslint-config-next": "16.0.0",
+		"eslint-config-next": "^16.0.1",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.6",
 		"typescript": "^5.9.2"
-	},
-	"pnpm": {
-		"overrides": {
-			"@types/react": "19.2.2",
-			"@types/react-dom": "19.2.2"
-		}
 	}
 }
