--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@supabase/supabase-js": "^2.80.0",
 		"ai": "^5.0.89",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"bcrypt": "^6.0.0",
