--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"@types/react-dom": "19.2.2",
 		"eslint": "^9.37.0",
 		"eslint-config-next": "^16.0.1",
+		"eslint-plugin-react": "7.37.5",
+		"eslint-plugin-react-hooks": "7.0.0",
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.6",
 		"typescript": "^5.9.2"
