--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"db:generate": "drizzle-kit generate --config=./src/lib/drizzle.config.ts",
+		"db:push": "drizzle-kit push --config=./src/lib/drizzle.config.ts",
+		"db:migrate": "bun db:generate && bun db:push --config=./src/lib/drizzle.config.ts"
 	},
 	"dependencies": {
+		"@better-auth/cli": "^1.3.34",
 		"@hookform/resolvers": "^5.2.1",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.15",
@@ -20,12 +24,16 @@
 		"ai": "^5.0.89",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"bcrypt": "^6.0.0",
+		"better-auth": "^1.3.34",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.44.7",
 		"jose": "^6.1.0",
 		"motion": "^12.23.12",
 		"next": "^16.0.1",
 		"pg": "^8.16.3",
+		"postgres": "^3.4.7",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"react-hook-form": "^7.62.0",
@@ -41,6 +49,7 @@
 		"@types/pg": "^8.15.5",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
+		"drizzle-kit": "^0.31.7",
 		"eslint": "^9.37.0",
 		"eslint-config-next": "^16.0.1",
 		"eslint-plugin-react": "7.37.5",
