--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"drizzle-orm": "^0.44.7",
 		"jose": "^6.1.0",
 		"motion": "^12.23.12",
-		"next": "^16.0.1",
+		"next": "^16.0.5",
 		"pg": "^8.16.3",
 		"postgres": "^3.4.7",
 		"react": "19.2.0",
@@ -49,9 +49,10 @@
 		"@types/pg": "^8.15.5",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
+		"baseline-browser-mapping": "^2.8.32",
 		"drizzle-kit": "^0.31.7",
 		"eslint": "^9.37.0",
-		"eslint-config-next": "^16.0.1",
+		"eslint-config-next": "^16.0.5",
 		"eslint-plugin-react": "7.37.5",
 		"eslint-plugin-react-hooks": "7.0.0",
 		"tailwindcss": "^4.1.12",
