--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
 		"db:migrate": "bun db:generate && bun db:push --config=./src/lib/drizzle.config.ts"
 	},
 	"dependencies": {
+		"@base-ui/react": "^1.1.0",
 		"@better-auth/cli": "^1.4.17",
 		"@hookform/resolvers": "^5.2.1",
 		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/supabase-js": "^2.91.1",
