--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
 		"jose": "^6.1.3",
 		"motion": "^12.29.0",
 		"next": "^16.1.4",
-		"pg": "^8.17.2",
 		"postgres": "^3.4.8",
+		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"react-hook-form": "^7.71.1",
